1.3.6 - Fix alignment of meta on widgets

--- a/assets/sass/partials/_widgets.scss
+++ b/assets/sass/partials/_widgets.scss
@@ -117,7 +117,6 @@
 // Meta Item
 .uplifted-widget-entry-meta > li {
 	display: inline-block;
-	vertical-align: top;
 
 	// Keep links from wrapping
 	a {
